Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38623

WinRT: Warning about keep-alives not working appears when using HTTP

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.1
    • 5.3.0 RC1
    • Network: HTTP
    • Windows 8 Runtime
      Windows Phone 8
    • WinRT
    • 451668d2524a62845f84cfa8f7297037657972a8

      The following warning appears when using HTTP on WinRT:

      Could not set KeepAlive value

      The warning doesn't print the error, so that's the first thing which should be fixed (use qErrnoWarning).

      When investigating this earlier, the problem appeared to be that the socket engine tries to set this value before the socket is in a valid state for this to be set. If that is indeed the case, the engine should store the http keep alive flag and apply it at a later time as needed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes